...
            correct: correctAnswers,
            total: questionsAmount
        )

        let bestGame = statisticService.bestGame
        let result = QuizResultsViewModel(
            title: "Раунд окончен",
            text: """
            Ваш результат: \(correctAnswers)/\(questionsAmount)
            Количество сыгранных квизов: \(statisticService.gamesCount)
            Рекорд: \(bestGame.correct)/\(bestGame.total) (\(bestGame.date.dateTimeString))
            Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))%
            """,
            buttonText: "Сыграть ещё раз"
        )

        viewController?.showAlert(result: result) { [weak self] in
            guard let self else { return }
            self.currentQuestionIndex = 0
            self.correctAnswers = 0
...
